# stateful-block-lang

./: .gitignore  .gitmodules  BUILD.bazel  LICENSE  WORKSPACE.bazel  design doc.txt  index.html  package.json  tsconfig.json
old/: package-lock.json  package.json  server.ts
old/src/: blockly_component.tsx  code_gen.ts  custom_blocks.ts  editor.tsx  example.ts  menu_bar.tsx  perftest.ts
old/src/lang/: BUILD.bazel  base2.ts  core.ts  ops.ts  scope.ts  serial_format_test.txt  sig.ts
s7_based/: .gitignore  .prettierignore  Makefile  await.scm  import.scm  index.html  package.json  rpc.scm  s7_html_tags.js  s7_interop.js  s7_wasm.c  s7elem.html  s_parse.spec.ts  s_parse.ts  scheme.js  scheme_rpc.ts  sequentialize.spec.ts  sequentialize.ts  source.sh  start.js  start.ts  test_block_shapes.html  tsconfig.json
src/: BUILD.bazel  aaaaappp.ts_but_actually_not  app.tsx  base.ts  base2.ts  blockly_component.tsx  codeGen.ts  custom_blocks.ts  editor.tsx  index.tsx  menu_bar.tsx  perftest.mjs  serdes.ts
src/lang/: base.js  base2.ts  design doc.txt  old.ts
