load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary", "copy_to_bin")


package(default_visibility = ["//visibility:public"])
exports_files(["tsconfig.json"], visibility = ["//:__subpackages__"])


ts_library(
    name = "server_lib",
    srcs = ["server.ts"],
    deps = [
        "@npm//@types/node",
        "@npm//express",
        "@npm//@types/express",
    ],
)

copy_to_bin(
    name = "blockly_media",
    srcs = [
        "@npm//blockly",
    ],
)

nodejs_binary(
    name = "server",
    entry_point = "server.ts",
    data = [
        ":server_lib",
        "//src:index_bundle",
        "index.html",
        "@npm//blockly",
    ]
)
