load("@npm//@bazel/typescript:index.bzl", "ts_library")
load("@npm//@bazel/esbuild:index.bzl", "esbuild")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "lang_lib",
    srcs = glob(["*.ts","*.tsx"]),
    module_name = "whiskers/src/lang",
    deps = [
    ]
)

"""
esbuild(
    name = "lang",
    entry_point = "base.ts",
    target = "es2015",
    sources_content = True,
    minify = False,
    args = [
        "--keep-names", # For convenience. Can be removed.
        "--resolve-extensions=.mjs,.js",
    ],
    define = [
        "process.env.NODE_ENV=\"browser\""
    ],
    tool = select({
        "@bazel_tools//src/conditions:darwin": "@esbuild_darwin//:bin/esbuild",
        "@bazel_tools//src/conditions:windows": "@esbuild_windows//:esbuild.exe",
        "@bazel_tools//src/conditions:linux_x86_64": "@esbuild_linux//:bin/esbuild",
    }),
    deps = [
        ":lang_lib"
    ],
)
"""
